syn-state-machine/src/common_tokens/snapshots/syn_state_machine__common_tokens__function_pointer_types__tests__it_matches_qualified.snap
---
source: syn-state-machine/src/common_tokens/function_pointer_types.rs
expression: "crate::parse::<BareFunctionType>(::quote::quote! {\n            for < 'a > unsafe extern \"C\" fn()\n        })"
---
Ok(
    (
        BareFunctionType {
            for: Some(
                ForLifetimes(
                    GenericParams(
                        [
                            LifetimeParam(
                                [],
                                LifetimeParam {
                                    id: Ident(
                                        a,
                                    ),
                                    bounds: None,
                                },
                            ),
                        ],
                    ),
                ),
            ),
            qualifiers: FunctionTypeQualifiers {
                unsafe: true,
                extern: Some(
                    Some(
                        StringLit {
                            raw: "\"C\"",
                            value: None,
                            num_hashes: None,
                            start_suffix: 3,
                        },
                    ),
                ),
            },
            params: Some(
                MaybeNamedFunctionParameters(
                    MaybeNamedFunctionParameters(
                        [],
                    ),
                ),
            ),
            ret: None,
        },
        0,
    ),
)
