syn-state-machine/src/common_tokens/snapshots/syn_state_machine__common_tokens__function_pointer_types__tests__it_matches_return.snap
---
source: syn-state-machine/src/common_tokens/function_pointer_types.rs
expression: "crate::parse::<BareFunctionType<Infallible,\n        PBox<TypeNoBounds<Infallible>>>>(::quote::quote! {\n            fn(Hello, World) -> i64\n        })"
---
Ok(
    (
        BareFunctionType {
            for: None,
            qualifiers: FunctionTypeQualifiers {
                unsafe: false,
                extern: None,
            },
            params: Some(
                MaybeNamedFunctionParameters(
                    MaybeNamedFunctionParameters(
                        [
                            MaybeNamedParam {
                                id: None,
                                ty: TypePath(
                                    TypePath {
                                        leading: false,
                                        segments: [
                                            Simple {
                                                id: Id(
                                                    Ident(
                                                        Hello,
                                                    ),
                                                ),
                                            },
                                        ],
                                    },
                                ),
                            },
                            MaybeNamedParam {
                                id: None,
                                ty: TypePath(
                                    TypePath {
                                        leading: false,
                                        segments: [
                                            Simple {
                                                id: Id(
                                                    Ident(
                                                        World,
                                                    ),
                                                ),
                                            },
                                        ],
                                    },
                                ),
                            },
                        ],
                    ),
                ),
            ),
            ret: Some(
                BareFunctionReturnType(
                    TypePath(
                        TypePath {
                            leading: false,
                            segments: [
                                Simple {
                                    id: Id(
                                        Ident(
                                            i64,
                                        ),
                                    ),
                                },
                            ],
                        },
                    ),
                ),
            ),
        },
        0,
    ),
)
