syn-state-machine/src/common_tokens/snapshots/syn_state_machine__common_tokens__function_pointer_types__tests__it_matches_simple.snap
---
source: syn-state-machine/src/common_tokens/function_pointer_types.rs
expression: "crate::parse::<BareFunctionType>(::quote::quote! { fn() })"
---
Ok(
    (
        BareFunctionType {
            for: None,
            qualifiers: FunctionTypeQualifiers {
                unsafe: false,
                extern: None,
            },
            params: Some(
                MaybeNamedFunctionParameters(
                    MaybeNamedFunctionParameters(
                        [],
                    ),
                ),
            ),
            ret: None,
        },
        0,
    ),
)
